// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader element-shorthand 0: element-shorthand-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
    width: 96px;
    height: 96px;
  }

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader element-shorthand js : Compiled JS 1`] = `
"import styled from 'astroturf';

const SIZE = 75;

const FancyBox = styled(\\"div\\", null, \\"FancyBox\\", require(\\"./element-shorthand-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");
"
`;

exports[`Loader example 0: example-styles.less 1`] = `
"
  .foo {
    color: red;
    width: 75px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
"
`;

exports[`Loader example js : Compiled JS 1`] = `
"import { css as less } from 'astroturf';

const SIZE = 75;

const styles = require('./example-styles.less');
"
`;

exports[`Loader hoist-import 0: hoist-import-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.button-base {

  

  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 1px solid transparent;

}"
`;

exports[`Loader hoist-import js : Compiled JS 1`] = `
"import { styled } from 'astroturf';

const ButtonBase = styled('button', null, \\"ButtonBase\\", require(\\"./hoist-import-ButtonBase.css\\"), \\"button-base\\", \\"buttonBase\\");
"
`;

exports[`Loader multiple-components 0: multiple-components-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
		width: 96px;
		height: 96px;
	}

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader multiple-components 1: multiple-components-FancyHeader.css 1`] = `
".fancy-header {

  color: red;
  width: 75px;

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader multiple-components js : Compiled JS 1`] = `
"import styled, { css } from 'astroturf';

const SIZE = 75;

// prettier-ignore
const FancyBox = styled('div', null, \\"FancyBox\\", require(\\"./multiple-components-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");

const FancyHeader = styled('h2', null, \\"FancyHeader\\", require(\\"./multiple-components-FancyHeader.css\\"), \\"fancy-header\\", \\"fancyHeader\\");
"
`;

exports[`Loader no-global js : Compiled JS 1`] = `
"const SIZE = 75;

const styles = less\`
  .foo {
    color: red;
    width: \${SIZE}px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
\`;
"
`;

exports[`Loader pass-options 0: pass-options-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
    width: 96px;
    height: 96px;
  }

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader pass-options 1: pass-options-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Loader pass-options js : Compiled JS 1`] = `
"import styled from 'astroturf';

const SIZE = 75;

// prettier-ignore
const FancyBox = styled('div', {
  someOption: true
}, \\"FancyBox\\", require(\\"./pass-options-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");

const options = {};

const FancierBox = styled(FancyBox, options, \\"FancierBox\\", require(\\"./pass-options-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");
"
`;

exports[`Loader styled 0: styled-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
    width: 96px;
    height: 96px;
  }

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader styled 1: styled-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Loader styled js : Compiled JS 1`] = `
"import styled from 'astroturf';

const SIZE = 75;

// prettier-ignore
const FancyBox = styled('div', null, \\"FancyBox\\", require(\\"./styled-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");

const FancierBox = styled(FancyBox, null, \\"FancierBox\\", require(\\"./styled-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");
"
`;

exports[`Loader styled-global 0: styled-global-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;
  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader styled-global 1: styled-global-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Loader styled-global js : Compiled JS 1`] = `
"// prettier-ignore
const FancyBox = styled('div', null, \\"FancyBox\\", require(\\"./styled-global-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");

const FancierBox = styled(FancyBox, null, \\"FancierBox\\", require(\\"./styled-global-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");
"
`;

exports[`Loader styled-tag 0: styled-tag-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;
  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Loader styled-tag 1: styled-tag-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Loader styled-tag js : Compiled JS 1`] = `
"import s from 'astroturf';

// prettier-ignore
const FancyBox = styled('div', null, \\"FancyBox\\", require(\\"./styled-tag-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");

const FancierBox = styled(FancyBox, null, \\"FancierBox\\", require(\\"./styled-tag-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");
"
`;

exports[`Loader typescript 0: typescript-styles.css 1`] = `
"
  .foo {
    color: red;
    width: 75px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
"
`;

exports[`Loader typescript js : Compiled JS 1`] = `
"import { css } from 'astroturf';
import React from 'react';

const SIZE = 75;

const styles = require('./typescript-styles.css');

interface PropsType {
  children: JSX.Element;
  name: string;
}

function fooGood<T extends { x: number }>(obj: T): T {
  console.log(Math.abs(obj.x));
  return obj;
}

class Component extends React.Component<PropsType, {}> {
  render() {
    return <h2>{this.props.children}</h2>;
  }
}

// OK
"
`;

exports[`Loader with-props 0: with-props-RedPasswordInput.css 1`] = `
".red-password-input {

  background-color: red;

}"
`;

exports[`Loader with-props js : Compiled JS 1`] = `
"import { styled } from 'astroturf';
import withProps from 'recompose/withProps';

const RedPasswordInput = withProps({
  type: 'password',
})(styled('input', null, \\"RedPasswordInput\\", require(\\"./with-props-RedPasswordInput.css\\"), \\"red-password-input\\", \\"redPasswordInput\\"));
"
`;
